tests/baselines/reference/constructorParametersThatShadowExternalNamesInVariableDeclarations.errors.txt
==== tests/cases/compiler/constructorParametersThatShadowExternalNamesInVariableDeclarations.ts (2 errors) ====
    var x = 1;
    class A {
        private a = x;
                    ~
!!! constructorParametersThatShadowExternalNamesInVariableDeclarations.ts(3,17): error TS2230: Initializer of instance member variable 'a' cannot reference identifier 'x' declared in the constructor.
        constructor(x: number) {
        }
    }
    
    class B {
        private a = x;
                    ~
!!! constructorParametersThatShadowExternalNamesInVariableDeclarations.ts(9,17): error TS2230: Initializer of instance member variable 'a' cannot reference identifier 'x' declared in the constructor.
        constructor() {
            var x = "";
        }
    }